--- a/home/templates/home/bluescan.html
+++ b/home/templates/home/bluescan.html
@@ -314,6 +314,29 @@
       </div>
     </div>
   </section>
+  <section>
+    <div>
+      <div id="content-with-photo4-block" class="pt-5">
+        <div class="container py-md-3">
+          <h3>Videos :</h3>
+              <br>
+        </div>
+      </div>
+      <div class="container">
+        <div class="column">
+          <div class="col-auto mb-4">
+            <div class="card" style="width: 50vw;">
+              <iframe style="height: 40vh;" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+              </iframe>
+              <div class="card-body">
+                <h6>Video Title</h6>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
   <br />
   <br />
   <section class="w3l-content-with-photo-4" id="about">
