--- a/home/templates/home/bluefix.html
+++ b/home/templates/home/bluefix.html
@@ -507,10 +507,10 @@
       <div class="column">
         <div class="col-auto mb-4">
           <div class="card" style="width: 50vw;">
-            <iframe style="height: 40vh;" src="https://www.youtube.com/embed/tgbNymZ7vqY">
+            <iframe style="height: 40vh;" src="https://www.youtube.com/embed/MEz693ONHAY"">
             </iframe>
             <div class="card-body">
-              <h6>Video Title</h6>
+              <h5>BlueFlex - BlueFix</h5>
             </div>
           </div>
         </div>
