--- a/home/templates/home/bluescan.html
+++ b/home/templates/home/bluescan.html
@@ -238,7 +238,12 @@
     <div class="container py-lg-5 py-md-4 py-sm-4 py-xs-4" style="background: #d19537; padding: 20px 15px">
       <!-- <h6 class="title-small text-center" style="color:#1e1c59;">Our Services</h6> -->
       <h3 class="title-big mb-md-5 mb-4 text-center" style="color: #ffffff">
-        Features
+        <div class="heading text-center mx-auto">
+          <h3 style="color: #ffffff; padding-bottom: 10px;
+            border-bottom: 3px solid gold;
+            line-height: 48px;
+          ">Features</h3>
+        </div>
       </h3>
       <div class="grids-area-hny main-cont-wthree-fea row">
         <div class="col-lg-4 col-md-4 grids-feature">
@@ -309,45 +314,6 @@
       </div>
     </div>
   </section>
-  <section class="w3l-content-with-photo-4" id="about">
-    <div id="content-with-photo4-block" class="pt-5">
-      <div class="container py-md-3">
-        <h3>Specifications</h3>
-        <br />
-        <img src="media/image/diagram.png" style="
-            display: block;
-            margin-left: auto;
-            margin-right: auto;
-            width: 75%;
-          " class="img-fluid" alt="" />
-      </div>
-    </div>
-  </section>
-  <section>
-    <div>
-      <div id="content-with-photo4-block" class="pt-5">
-        <div class="container py-md-3">
-          <h3>Videos :</h3>
-          <br>
-        </div>
-      </div>
-      <div class="container">
-        <div class="column">
-          <div class="col-auto mb-4">
-            <div class="card" style="width: 50vw;">
-              <iframe style="height: 40vh;" src="https://www.youtube.com/embed/faZBMcf525I">
-              </iframe>
-              <div class="card-body">
-                <h5>BlueFlex - BlueScan</h5>
-              </div>
-            </div>
-          </div>
-        </div>
-      </div>
-    </div>
-  </section>
-  <br />
-  <br />
   <section class="w3l-content-with-photo-4" id="about">
     <div id="content-with-photo4-block" class="pt-5">
       <div class="container py-md-3">
@@ -435,7 +401,45 @@
       </div>
     </div>
   </div>
-
+  <section class="w3l-content-with-photo-4" id="about">
+    <div id="content-with-photo4-block" class="pt-5">
+      <div class="container py-md-3">
+        <h3>Specifications</h3>
+        <br />
+        <img src="media/image/diagram.png" style="
+            display: block;
+            margin-left: auto;
+            margin-right: auto;
+            width: 75%;
+          " class="img-fluid" alt="" />
+      </div>
+    </div>
+  </section>
+  <section>
+    <div>
+      <div id="content-with-photo4-block" class="pt-5">
+        <div class="container py-md-3">
+          <h3>Videos :</h3>
+          <br>
+        </div>
+      </div>
+      <div class="container">
+        <div class="column">
+          <div class="col-auto mb-4">
+            <div class="card" style="width: 50vw;">
+              <iframe style="height: 40vh;" src="https://www.youtube.com/embed/faZBMcf525I">
+              </iframe>
+              <div class="card-body">
+                <h5>BlueFlex - BlueScan</h5>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </div>
+  </section>
+  <br />
+  <br />
   <div class="container mt-4" style="background: #d19537">
     <br />
     <h3 style="color: white">Applications</h3>
